[gd_scene load_steps=5 format=2]

[ext_resource path="res://PageBrain.gd" type="Script" id=1]
[ext_resource path="res://ui_theme.tres" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 16.0
content_margin_bottom = 16.0
bg_color = Color( 0.262745, 0.176471, 0.34902, 1 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 8.0
bg_color = Color( 0.933333, 0.882353, 0.811765, 1 )

[node name="TabContainer" type="TabContainer"]
margin_right = 760.0
margin_bottom = 1015.0
theme = ExtResource( 2 )
tab_align = 0
script = ExtResource( 1 )

[node name="PageViewer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 54.0
custom_styles/bg = SubResource( 1 )
scroll_horizontal_enabled = false

[node name="RichTextLabel" type="RichTextLabel" parent="PageViewer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 856.0
margin_bottom = 58.0
rect_min_size = Vector2( 840, 0 )
rect_clip_content = false
custom_styles/normal = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "toast lol"
text = "toast lol"
fit_content_height = true

[node name="PageViewer2" type="ScrollContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 39.0
custom_styles/bg = SubResource( 1 )
scroll_horizontal_enabled = false

[node name="RichTextLabel" type="RichTextLabel" parent="PageViewer2"]
margin_left = 16.0
margin_top = 16.0
margin_right = 856.0
margin_bottom = 222.0
rect_min_size = Vector2( 840, 0 )
rect_clip_content = false
custom_styles/normal = SubResource( 2 )
bbcode_enabled = true
fit_content_height = true

[node name="PageViewer3" type="ScrollContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 39.0
margin_right = -4.0
margin_bottom = -4.0
custom_styles/bg = SubResource( 1 )
scroll_horizontal_enabled = false

[node name="RichTextLabel" type="RichTextLabel" parent="PageViewer3"]
margin_left = 16.0
margin_top = 16.0
margin_right = 856.0
margin_bottom = 222.0
rect_min_size = Vector2( 840, 0 )
rect_clip_content = false
custom_styles/normal = SubResource( 2 )
bbcode_enabled = true
fit_content_height = true
